<resources>
    <string name="app_name">Gelişmiş Komutlar Unite 5</string>
    <string name="uyg1_isim">Uygulama 1</string>
    <string name="uyg2_isim">Uygulama 2</string>
    <string name="uyg3_isim">Uygulama 3</string>
    <string name="uyg4_isim">Uygulama 4</string>
    <string name="uyg5_isim">Uygulama 5</string>
    <string name="uyg6_isim">Uygulama 6</string>
    <string name="uyg7_isim">Uygulama 7</string>
    <string name="uyg8_isim">Uygulama 8</string>
    <string name="uyg9_isim">Uygulama 9</string>
    <string name="uyg10_isim">Uygulama 10</string>
    <string name="uyg11_isim">Uygulama 11</string>
    <string name="uyg12_isim">Uygulama 12</string>
    <string name="uyg13_isim">Uygulama 13</string>
    <string name="geri">Geri</string>
    <string name="uyg1_txt1">Selam Ver 1</string>
    <string name="uyg1_txt2">Selam Ver 2</string>
    <string name="say_1">Sayı 1</string>
    <string name="topla_ve_g_ster">Topla ve göster</string>
    <string name="say_2">Sayı 2</string>
    <string name="sonu_burada_g_z_kecek">Sonuç Burada gözükecek.</string>
    <string name="ss_169_txt">Sayı Giriniz</string>
    <string name="topla">Topla</string>
    <string name="kar">Çıkar</string>
    <string name="b_l">BÖL</string>
    <string name="arp">ÇARP</string>
    <string name="_2_say_y_topla">2 Sayıyı topla</string>
    <string name="_3_say_y_topla">3 Sayıyı Topla</string>
    <string name="say_12">Sayı 1</string>
    <string name="say_23">Sayı 2</string>
    <string name="say_3">Sayı 3</string>
    <string name="soyad_n_z">Soyadınız..</string>
    <string name="ad_n_z">Adınız..</string>
    <string name="merhaba_1">Merhaba 1</string>
    <string name="merhaba_2">Merhaba 2</string>
</resources>